# GLGraphicsEngine

./: .gitignore  CMakeLists.txt  CameraClass.h  EBO.cpp  GLGraphicsEngine.slnx  GLGraphicsEngine.vcxproj  GLGraphicsEngine.vcxproj.filters  README.md  ShaderClass.cpp  ShaderClass.h  TextureClass.cpp  TextureClass.h  VAO.cpp  VAO.h  VBO.h  default.frag  default.vert  main.cpp
GLGraphicsEngine/x64/Debug/: GLGraphicsEngine.exe.recipe  GLGraphicsEngine.ilk  vc145.idb
GLGraphicsEngine/x64/Debug/GLGraphicsEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GLGraphicsEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Libraries/include/glad/: glad.h
shaders/: default.frag
src/: CameraClass.cpp  EBO.h  ShaderClass.cpp  TextureClass.cpp  glad.c  main.cpp
